Seccion Habilidades y otras secciones

--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
                         <a class="nav-link" href="#conoceme">Conoceme</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Experiencia</a>
+                        <a class="nav-link" href="#experiencia">Experiencia</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Educación</a>
+                        <a class="nav-link" href="#educacion">Educación</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Habilidades</a>
+                        <a class="nav-link" href="#habilidades">Habilidades</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contacto</a>
+                        <a class="nav-link" href="#contacto">Contacto</a>
                     </li>
                     <!-- Redes Sociales -->
                     <li class="nav-item red-social">
@@ -89,12 +89,72 @@
             Lorem ipsum dolor sit amet consectetur <br /> adipisicing elit. Officiis, reiciendis?
         </p>
     </section>
-    <!-- Fin Pagina Inicio -->
-    <!-- Sección "Conoceme" -->
-    <div id="conoceme">
-        <h1>Conoceme</h1>
 
-    </div>
+    <!-- Sección "Conoceme" -->
+    <section id="conoceme">
+        <h1 class="titulos display-1">Conoceme</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure ab voluptate natus quas pariatur nam officiis sed praesentium nesciunt tempora, ullam beatae ad aliquam velit quos voluptatibus corrupti, voluptatem vero?
+        Modi necessitatibus rem at atque! Eum, explicabo ipsa nostrum architecto odit at numquam et eligendi, eius vero culpa sit minima quo reprehenderit reiciendis vel, pariatur adipisci esse temporibus? Ex, doloremque.
+        Tempora deserunt itaque quidem molestias commodi a ut eaque, magni corporis, cumque natus? Dolor asperiores at dolore, earum ab veritatis delectus nulla eos sit! Perspiciatis impedit officiis aliquid voluptatibus fuga!</p>
+    </section>
+
+    <!-- Sección "experiencia" -->
+    <section id="experiencia">
+        <h1 class="titulos display-1">Experiencia</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum eum ad ullam consequuntur, rem consectetur ab sunt vel cum voluptas ipsam natus ex obcaecati tenetur! Accusantium consequatur vitae harum sit.
+        Fuga alias quod quos quidem quam repellendus fugiat repellat beatae quis rem sit, reiciendis sed, minima possimus nemo saepe atque pariatur. Rerum est atque quam laboriosam, a laborum possimus eligendi.</p>
+
+    </section>
+
+    <!-- Sección "educación" -->
+    <section id="educacion" >
+        <h1 class="titulos display-1">Educación</h1>
+
+    </section>
+
+    <!-- Sección "habilidades" -->
+    <section id="habilidades" >
+        <h1 class="titulos display-1">Habilidades</h1>
+
+        <!-- Barra de Habilidades -->
+        <div class="box-habilidades">
+            <h2 class="titulos-habilidades">HTML</h2>
+            <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" style="width: 80%">80%</div>
+            </div>
+            <h2 class="titulos-habilidades">CSS</h2>
+            <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" style="width: 70%">70%</div>
+            </div>
+            <h2 class="titulos-habilidades">JavaScript</h2>
+            <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning text-dark" style="width: 25%">25%</div>
+            </div>
+            <h2 class="titulos-habilidades">Bootstrap</h2>
+            <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-info text-dark" style="width: 70%">70%</div>
+            </div>
+            <h2 class="titulos-habilidades">Phyton</h2>
+            <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-info text-dark" style="width: 70%">70%</div>
+            </div>
+            <h2 class="titulos-habilidades">C</h2>
+            <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 60%">60%</div>
+            </div>
+            <h2 class="titulos-habilidades">Git</h2>
+            <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" style="width: 70%">70%</div>
+            </div>
+            <br>
+        </div>
+
+    </section>
+
+    <!-- Sección Contacto -->
+    <section id="contacto">
+        <h1 class="titulos display-1">Contacto</h1>
+    </section>
 
 
 
